# FaceSimXAI

./: .gitattributes  .gitignore  LICENSE.txt  README.md
FaceSim3D/: LICENSE-MIT  README.md  pyproject.toml  setup.py
FaceSim3D/code/LRP_Heatmaps/: Patterns_Prediction_Acc.ipynb  Save_single_LRP_Heatmaps_HJ.py  Save_single_LRP_Heatmaps_MaxP.py  average_triplet_heatmap_humJudge.py  average_triplet_heatmap_maxp5_3.py  visualize_orig_VS_lrp.py
FaceSim3D/code/LRP_LLM_analysis/: Decoding_Heatmaps_HJ.ipynb  Decoding_Heatmaps_MaxP.ipynb  Evaluate_LLM_results.ipynb  Evaluate_Permutation_Invariance.ipynb  visualize_ooo_results.py  whole_llm_pipeline.py
FaceSim3D/code/LRP_PCA_Autoencoder_analysis/: Average_Cluster_Heatmaps_HJ.ipynb  Average_Cluster_Heatmaps_MaxP.ipynb  Latent_Processing_betaVAE.ipynb  PCA_explained_variance_all.py  PCA_explained_variance_avg.py  PCA_on_avg_Heatmaps.ipynb  PCA_on_single-trial_Heatmaps.ipynb  training_AE_HJ.py  training_AE_MaxP.py  training_betaVAE_HJ.py
FaceSim3D/code/LRP_regional_analysis/: annotate_facial_regions.py  mediapipe_facial_regions_intro_and_analysis.ipynb  mediapipe_relevance_per_region_humJudge.py  mediapipe_relevance_per_region_maxpSim.py
FaceSim3D/code/VGGFace_Base_Model/: 1_fetch_VGGFace_maxp5_3_output.py  2_similarity_VGGFace_maxp5_3.py  ADDITIONAL_ooo-distribution-stats.py  LRP_VGGFace_per_head.py
FaceSim3D/code/configs/: config.toml
FaceSim3D/code/facesim3d/: __init__.py  configs.py  local_paths.py  lrp_utils.py  read_data.py
FaceSim3D/code/facesim3d/modeling/: face_attribute_processing.py
FaceSim3D/code/facesim3d/modeling/VGG/: models.py  prepare_data.py  vgg_face.py  vgg_predict.py  vgg_train_maxp5_3_similarity.py
environments/: README.md  latent_analysis_env.yml  mediapipe_env.yml
